--- a/form/registration.html
+++ b/form/registration.html
@@ -8,14 +8,14 @@
 	<body text="white" bgcolor="teal">
 		<h1><i>Регистрация новой почты</i></h1>
 		
-		<form action="#" name="myForm" method="Post">
+		<form action="#" name="myform" method="post">
 			
-			<label for="textPole">Имя:
-				<input type="text" id="textPole" name="textPole">
+			<label for="textpole">Имя:
+				<input type="text" id="textpole" name="textpole">
 			</label>
 			
-			<label for="textPole">Фамилия:
-				<input type="text" id="textPole" name="textPole">
+			<label for="textpole">Фамилия:
+				<input type="text" id="textpole" name="textpole">
 			</label>
 			
 			<br>
@@ -106,38 +106,38 @@
 			
 			<br>
 			
-			<label for="radioPole">Выберите пол:
-				<input type="radio" id="radioPole" name="radioPole" value="1"> Женский
-				<input type="radio" id="radioPole" name="radioPole" value="1"> Мужской
+			<label for="radiopole">Выберите пол:
+				<input type="radio" id="radiopole" name="radiopole" value="1"> Женский
+				<input type="radio" id="radiopole" name="radiopole" value="1"> Мужской
 			</label>
 			
 			<br>
 			
-			<label for="textPole">Желаемый почтовый адрес:
-				<input type="text" id="textPole" name="textPole">
+			<label for="textpole">Желаемый почтовый адрес:
+				<input type="text" id="textpole" name="textpole">
 			</label>
 			
 			<br>
 			
-			<label for="textPole">Придумайте пароль:
-				<input type="text" id="textPole" name="textPole">
+			<label for="textpole">Придумайте пароль:
+				<input type="password" id="textpole" name="textpole">
 			</label>
 			
 			<br>
 			
-			<label for="textPole">Повторите пароль:
-				<input type="text" id="textPole" name="textPole">
+			<label for="textpole">Повторите пароль:
+				<input type="password" id="textpole" name="textpole">
 			</label>
 			
 			<br>
 			
-			<label for="checkboxPole">Получать рассылку от Компании
-				<input type="checkbox" id="checkboxPole" name="checkboxPole">
+			<label for="checkboxpole">Получать рассылку от Компании
+				<input type="checkbox" id="checkboxpole" name="checkboxpole">
 			</label>
 			<br>
 			<p>Выберите фото для профиля:</p>
 			<p>
-				<input type="file" name="filePole">
+				<input type="file" name="filepole">
 			</p>
 			
 			<p>Ошибка в заполнении? Очистите форму</p>
@@ -153,8 +153,8 @@
 		
 			<br>
 		
-			<label for="commentPole">Оставьте пожалуйста отзыв о нашей Компании:
-				<textarea id="commentPole" name="comment" cols="50px" rows="10px"></textarea>
+			<label for="commentpole">Оставьте пожалуйста отзыв о нашей Компании:
+				<textarea id="commentpole" name="comment" cols="50px" rows="10px"></textarea>
 			</label>
 			
 			<p>
