--- a/bg1/bg1.html
+++ b/bg1/bg1.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>bg1</title>
 		<meta charset="utf-8">
-		<link rel="stylsheet" href="bg1.css">
+		<link rel="stylesheet" href="bg1.css">
 	</head>
 	
 	<body>
